syntax = "proto3";

package gitpod.v1;

import "google/protobuf/timestamp.proto";
import "gitpod/v1/pagination.proto";
import "gitpod/v1/scm.proto";

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/v1";

service PrebuildService {
    rpc StartPrebuild(StartPrebuildRequest) returns (StartPrebuildResponse) {}
    rpc CancelPrebuild(CancelPrebuildRequest) returns (CancelPrebuildResponse) {}

    rpc GetPrebuild(GetPrebuildRequest) returns (GetPrebuildResponse) {}
    rpc ListPrebuilds(ListPrebuildsRequest) returns (ListPrebuildsResponse) {}
    rpc WatchPrebuild(WatchPrebuildRequest) returns (stream WatchPrebuildResponse) {}
}

message GetPrebuildRequest {
    string prebuild_id = 1;
}
message GetPrebuildResponse {
    Prebuild prebuild = 1;
}

message ListPrebuildsRequest {
    PaginationRequest pagination = 1;
    // it is for backward compatiblity with the current dashboard, use prebuild_id instead
    string build_workspace_id = 2 [deprecated = true];
    string configuration_id = 3;
    string git_ref = 4;
}

message ListPrebuildsResponse {
    PaginationResponse pagination = 1;
    repeated Prebuild prebuilds = 2;
}

message StartPrebuildRequest {
    string configuration_id = 1;
    string git_ref = 2;
}
message StartPrebuildResponse {
    string prebuild_id = 1;
}

message CancelPrebuildRequest {
    string prebuild_id = 1;
}
message CancelPrebuildResponse {
}

message WatchPrebuildRequest {
    repeated string prebuild_ids = 1;
}
message WatchPrebuildResponse {
    Prebuild prebuild = 1;
}

message Prebuild {
    string id = 1;
    // it is for backward compatiblity with the current dashboard, use prebuild_id instead
    string build_workspace_id = 2 [deprecated = true];

    string based_on_prebuild_id = 3;

    string configuration_id = 4;
    string ref = 5;

    Commit commit = 6;
    string context_url = 7;

    PrebuildStatus status = 8;
}

message PrebuildStatus {
    PrebuildPhase phase = 1;
    google.protobuf.Timestamp start_time = 2;
    // message is an optional human-readable message detailing the current phase
    string message = 3;
}

message PrebuildPhase {
    enum Phase {
        PHASE_UNSPECIFIED = 0;
        PHASE_QUEUED = 1;
        PHASE_BUILDING = 2;
        PHASE_ABORTED = 3;
        PHASE_TIMEOUT = 4;
        PHASE_AVAILABLE = 5;
        PHASE_FAILED = 6;
    }
    Phase name = 1;
}
